AC_INIT([rebindr], [0.1], [none], [rebindr], [none])
AC_PREREQ([2.59])
AC_CONFIG_AUX_DIR([m4])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([1.10 -Wall no-define foreign])
AC_PROG_LIBTOOL
AC_PROG_CXX
AM_PROG_CC_C_O

AC_LANG([C++])
AC_LANG_CPLUSPLUS
AC_CHECK_HEADER(cstdint)
AX_CXX_COMPILE_STDCXX_0X

BOOST_REQUIRE
BOOST_ASIO
BOOST_SYSTEM
BOOST_FILESYSTEM
BOOST_THREADS
BOOST_DATE_TIME
BOOST_REGEX
BOOST_ARRAY
BOOST_BIND

CXXFLAGS='-Wall -std=gnu++0x'


AC_CONFIG_FILES([Makefile])
AC_OUTPUT
